force-app/main/default/objects/Deployment_Component__c/fields/After_Value__c.field-meta.xml
<CustomField>
    <fullName>After_Value__c</fullName>
    <label>After Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>