force-app/main/default/objects/Deployment_Component__c/fields/Component_Action__c.field-meta.xml
<CustomField>
    <fullName>Component_Action__c</fullName>
    <label>Component Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>