force-app/main/default/objects/Deployment_Component__c/fields/Component_Status__c.field-meta.xml
<CustomField>
    <fullName>Component_Status__c</fullName>
    <label>Component Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>