force-app/main/default/objects/Deployment_Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ApexClass</fullName>
                <label>Apex Class</label>
            </value>
            <value>
                <fullName>ApexTrigger</fullName>
                <label>Apex Trigger</label>
            </value>
            <value>
                <fullName>AuraDefinitionBundle</fullName>
                <label>Aura Component</label>
            </value>
            <value>
                <fullName>ConnectedApp</fullName>
                <label>Connected App</label>
            </value>
            <value>
                <fullName>CustomApplication</fullName>
                <label>Custom Application</label>
            </value>
            <value>
                <fullName>CustomField</fullName>
                <label>Custom Field</label>
            </value>
            <value>
                <fullName>CustomLabel</fullName>
                <label>Custom Label</label>
            </value>
            <value>
                <fullName>CustomMetadata</fullName>
                <label>Custom Metadata</label>
            </value>
            <value>
                <fullName>CustomObject</fullName>
                <label>Custom Object</label>
            </value>
            <value>
                <fullName>CustomTab</fullName>
                <label>Custom Tab</label>
            </value>
            <value>
                <fullName>EmailTemplate</fullName>
                <label>Email Template</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Layout</fullName>
            </value>
            <value>
                <fullName>LightningComponentBundle</fullName>
                <label>Lightning Web Component</label>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>StaticResource</fullName>
                <label>Static Resource</label>
            </value>
            <value>
                <fullName>ValidationRule</fullName>
                <label>Validation Rule</label>
            </value>
            <value>
                <fullName>WorkflowRule</fullName>
                <label>Workflow Rule</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>