force-app/main/default/objects/Deployment_Component__c/fields/Deployment_Record__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Record__c</fullName>
    <label>Deployment Record</label>
    <referenceTo>Deployment_Record__c</referenceTo>
    <relationshipLabel>Deployment Components</relationshipLabel>
    <relationshipName>Deployment_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>