force-app/main/default/objects/Deployment_Component__c/fields/Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Bytes__c</fullName>
    <label>Size (Bytes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>