force-app/main/default/objects/Deployment_Component__c/fields/Test_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Test_Coverage__c</fullName>
    <label>Test Coverage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>